add US hub reference and name change

--- a/paper/library.bib
+++ b/paper/library.bib
@@ -264,3 +264,113 @@
   doi      = "10.1038/s41467-021-25207-0",
   pmc      = "PMC8397791"
 }
+
+
+@ARTICLE{Cramer2022-sp,
+  title    = "Evaluation of individual and ensemble probabilistic forecasts of
+              {COVID-19} mortality in the United States",
+  author   = "Cramer, Estee Y and Ray, Evan L and Lopez, Velma K and Bracher,
+              Johannes and Brennen, Andrea and Castro Rivadeneira, Alvaro J and
+              Gerding, Aaron and Gneiting, Tilmann and House, Katie H and
+              Huang, Yuxin and Jayawardena, Dasuni and Kanji, Abdul H and
+              Khandelwal, Ayush and Le, Khoa and M{\"u}hlemann, Anja and Niemi,
+              Jarad and Shah, Apurv and Stark, Ariane and Wang, Yijin and
+              Wattanachit, Nutcha and Zorn, Martha W and Gu, Youyang and Jain,
+              Sansiddh and Bannur, Nayana and Deva, Ayush and Kulkarni, Mihir
+              and Merugu, Srujana and Raval, Alpan and Shingi, Siddhant and
+              Tiwari, Avtansh and White, Jerome and Abernethy, Neil F and
+              Woody, Spencer and Dahan, Maytal and Fox, Spencer and Gaither,
+              Kelly and Lachmann, Michael and Meyers, Lauren Ancel and Scott,
+              James G and Tec, Mauricio and Srivastava, Ajitesh and George,
+              Glover E and Cegan, Jeffrey C and Dettwiller, Ian D and England,
+              William P and Farthing, Matthew W and Hunter, Robert H and
+              Lafferty, Brandon and Linkov, Igor and Mayo, Michael L and Parno,
+              Matthew D and Rowland, Michael A and Trump, Benjamin D and
+              Zhang-James, Yanli and Chen, Samuel and Faraone, Stephen V and
+              Hess, Jonathan and Morley, Christopher P and Salekin, Asif and
+              Wang, Dongliang and Corsetti, Sabrina M and Baer, Thomas M and
+              Eisenberg, Marisa C and Falb, Karl and Huang, Yitao and Martin,
+              Emily T and McCauley, Ella and Myers, Robert L and Schwarz, Tom
+              and Sheldon, Daniel and Gibson, Graham Casey and Yu, Rose and
+              Gao, Liyao and Ma, Yian and Wu, Dongxia and Yan, Xifeng and Jin,
+              Xiaoyong and Wang, Yu-Xiang and Chen, Yangquan and Guo, Lihong
+              and Zhao, Yanting and Gu, Quanquan and Chen, Jinghui and Wang,
+              Lingxiao and Xu, Pan and Zhang, Weitong and Zou, Difan and
+              Biegel, Hannah and Lega, Joceline and McConnell, Steve and
+              Nagraj, V P and Guertin, Stephanie L and Hulme-Lowe, Christopher
+              and Turner, Stephen D and Shi, Yunfeng and Ban, Xuegang and
+              Walraven, Robert and Hong, Qi-Jun and Kong, Stanley and van de
+              Walle, Axel and Turtle, James A and Ben-Nun, Michal and Riley,
+              Steven and Riley, Pete and Koyluoglu, Ugur and DesRoches, David
+              and Forli, Pedro and Hamory, Bruce and Kyriakides, Christina and
+              Leis, Helen and Milliken, John and Moloney, Michael and Morgan,
+              James and Nirgudkar, Ninad and Ozcan, Gokce and Piwonka, Noah and
+              Ravi, Matt and Schrader, Chris and Shakhnovich, Elizabeth and
+              Siegel, Daniel and Spatz, Ryan and Stiefeling, Chris and
+              Wilkinson, Barrie and Wong, Alexander and Cavany, Sean and
+              Espa{\~n}a, Guido and Moore, Sean and Oidtman, Rachel and
+              Perkins, Alex and Kraus, David and Kraus, Andrea and Gao, Zhifeng
+              and Bian, Jiang and Cao, Wei and Lavista Ferres, Juan and Li,
+              Chaozhuo and Liu, Tie-Yan and Xie, Xing and Zhang, Shun and
+              Zheng, Shun and Vespignani, Alessandro and Chinazzi, Matteo and
+              Davis, Jessica T and Mu, Kunpeng and Pastore Y Piontti, Ana and
+              Xiong, Xinyue and Zheng, Andrew and Baek, Jackie and Farias,
+              Vivek and Georgescu, Andreea and Levi, Retsef and Sinha, Deeksha
+              and Wilde, Joshua and Perakis, Georgia and Bennouna, Mohammed
+              Amine and Nze-Ndong, David and Singhvi, Divya and Spantidakis,
+              Ioannis and Thayaparan, Leann and Tsiourvas, Asterios and Sarker,
+              Arnab and Jadbabaie, Ali and Shah, Devavrat and Della Penna,
+              Nicolas and Celi, Leo A and Sundar, Saketh and Wolfinger, Russ
+              and Osthus, Dave and Castro, Lauren and Fairchild, Geoffrey and
+              Michaud, Isaac and Karlen, Dean and Kinsey, Matt and Mullany,
+              Luke C and Rainwater-Lovett, Kaitlin and Shin, Lauren and
+              Tallaksen, Katharine and Wilson, Shelby and Lee, Elizabeth C and
+              Dent, Juan and Grantz, Kyra H and Hill, Alison L and Kaminsky,
+              Joshua and Kaminsky, Kathryn and Keegan, Lindsay T and Lauer,
+              Stephen A and Lemaitre, Joseph C and Lessler, Justin and
+              Meredith, Hannah R and Perez-Saez, Javier and Shah, Sam and
+              Smith, Claire P and Truelove, Shaun A and Wills, Josh and
+              Marshall, Maximilian and Gardner, Lauren and Nixon, Kristen and
+              Burant, John C and Wang, Lily and Gao, Lei and Gu, Zhiling and
+              Kim, Myungjin and Li, Xinyi and Wang, Guannan and Wang, Yueying
+              and Yu, Shan and Reiner, Robert C and Barber, Ryan and Gakidou,
+              Emmanuela and Hay, Simon I and Lim, Steve and Murray, Chris and
+              Pigott, David and Gurung, Heidi L and Baccam, Prasith and Stage,
+              Steven A and Suchoski, Bradley T and Prakash, B Aditya and
+              Adhikari, Bijaya and Cui, Jiaming and Rodr{\'\i}guez, Alexander
+              and Tabassum, Anika and Xie, Jiajia and Keskinocak, Pinar and
+              Asplund, John and Baxter, Arden and Oruc, Buse Eylul and Serban,
+              Nicoleta and Arik, Sercan O and Dusenberry, Mike and Epshteyn,
+              Arkady and Kanal, Elli and Le, Long T and Li, Chun-Liang and
+              Pfister, Tomas and Sava, Dario and Sinha, Rajarishi and Tsai,
+              Thomas and Yoder, Nate and Yoon, Jinsung and Zhang, Leyou and
+              Abbott, Sam and Bosse, Nikos I and Funk, Sebastian and Hellewell,
+              Joel and Meakin, Sophie R and Sherratt, Katharine and Zhou,
+              Mingyuan and Kalantari, Rahi and Yamana, Teresa K and Pei, Sen
+              and Shaman, Jeffrey and Li, Michael L and Bertsimas, Dimitris and
+              Skali Lami, Omar and Soni, Saksham and Tazi Bouardi, Hamza and
+              Ayer, Turgay and Adee, Madeline and Chhatwal, Jagpreet and
+              Dalgic, Ozden O and Ladd, Mary A and Linas, Benjamin P and
+              Mueller, Peter and Xiao, Jade and Wang, Yuanjia and Wang, Qinxia
+              and Xie, Shanghong and Zeng, Donglin and Green, Alden and Bien,
+              Jacob and Brooks, Logan and Hu, Addison J and Jahja, Maria and
+              McDonald, Daniel and Narasimhan, Balasubramanian and Politsch,
+              Collin and Rajanala, Samyak and Rumack, Aaron and Simon, Noah and
+              Tibshirani, Ryan J and Tibshirani, Rob and Ventura, Valerie and
+              Wasserman, Larry and O'Dea, Eamon B and Drake, John M and Pagano,
+              Robert and Tran, Quoc T and Ho, Lam Si Tung and Huynh, Huong and
+              Walker, Jo W and Slayton, Rachel B and Johansson, Michael A and
+              Biggerstaff, Matthew and Reich, Nicholas G",
+  journal  = "Proc. Natl. Acad. Sci. U. S. A.",
+  volume   =  119,
+  number   =  15,
+  pages    = "e2113561119",
+  month    =  apr,
+  year     =  2022,
+  keywords = "COVID-19; ensemble forecast; forecasting; model evaluation",
+  language = "en",
+  issn     = "0027-8424, 1091-6490",
+  pmid     = "35394862",
+  doi      = "10.1073/pnas.2113561119",
+  pmc      = "PMC9169655"
+}
