--- a/paper/paper.Rmd
+++ b/paper/paper.Rmd
@@ -48,7 +48,7 @@ knitr::opts_chunk$set(
 
 # Introduction {-}[a][b]
 
-Multi-model and multi-team ensembles have become increasingly popular as an approach to increase the robustness and performance of infectious disease forecasts over the last decade [@Sherratt2022-ue].
+Multi-model and multi-team ensembles have become increasingly popular as an approach to increase the robustness and performance of infectious disease forecasts over the last decade [@Cramer2022-sp; @Bracher2021-wk; @Sherratt2022-ue].
 These approaches have drawn heavily on the experience of other domains, for example, climate modelling [@REF], where ensembles of both multiple models and from multiple teams have a long history of providing superior forecasts.
 
 At the same time, ensemble forecasts have a range of potential downsides.
@@ -64,7 +64,7 @@ This means that non-parametric emulation is less suitable for use in epidemiolog
 
 In this work, we propose and evaluate a surrogate forecast model approach which seeks to emulate the observed behaviour of recent COVID-19 forecast ensembles using a minimal set of easily communicated assumptions, limited computational resources with an easily generalised implementation. 
 
-The trend towards large-scale multi-team ensemble forecasting in infectious diseases has accelerated during the COVID-19 pandemic, partially due to an increased need from stakeholders for reliable forecast models but also due to the perceived low quality of many forecasts otherwise being produced, with the establishment of the CDC forecasting hub [@REF] in early 2020, the Germany/Poland forecast hub [@Bracher2021-wk] in late 2020, and the European forecast hub [@Sherratt2022-ue] in 2021.
+The trend towards large-scale multi-team ensemble forecasting in infectious diseases has accelerated during the COVID-19 pandemic, partially due to an increased need from stakeholders for reliable forecast models but also due to the perceived low quality of many forecasts otherwise being produced, with the establishment of the US forecasting hub [@Cramer2022-sp] in early 2020, the Germany/Poland forecast hub [@Bracher2021-wk] in late 2020, and the European forecast hub [@Sherratt2022-ue] in 2021.
 All of these collaborations, which the authors (particularly SF and JB) have been involved with managing,  ensembled contributions from multiple independent teams using a similar approach (most recently an unweighted median ensemble [@Sherratt2022-ue]) and have shown that their ensemble forecasts outperform most individually contributed forecasts whilst remaining generally robust to outliers in reporting.
 However, they have struggled to provide feedback to those contributing forecasts that would allow them to improve their forecast approaches, have found it difficult to improve the quality of their ensemble forecasts [@Sherratt2022-ue], and have struggled to maintain incentives for forecasters to continue to contribute which may impact the long-term quality of the ensembles they produce. 
 
@@ -381,7 +381,7 @@ For real-time usage, convergence was not assessed, but during model development,
 
 To download and manipulate forecasts from the European forecasting hub [@EuroHub] we use  the `data.table` (`1.14.2`) [@data.table] and `gh` (`1.3.0`) [@gh] R packages.
 We make use of further functionality from the `forecast.vocs` R package [@forecast.vocs] to prepare data for forecasting, visualise forecasts and summary measures, and summarise forecasts.
-Forecast evaluation is implemented using the `scoringutils` R package (1.0.0) [@scoringutils], and the `scoringRules` R package (1.0.1) [@REF].
+Forecast evaluation is implemented using the `scoringutils` R package (1.0.0) [@scoringutils], and the `scoringRules` R package (1.0.1) [@scoringRules].
 
 To ensure the reproducibility of this analysis dependencies are managed using the `renv` R package (`0.14.0`) [@renv] and a Dockerfile file along with a built Docker image [@Boettiger:2015dw] (via GitHub Actions [@GitHubActionsAbout]) is provided in the code repository.
 Weekly forecasts were made using `renv` and based GitHub Actions free tier as available in 2022 to ensure they require limited compute and that our implementation is independent of local resources facilitating democratised access.
@@ -574,7 +574,7 @@ The downside of this approach is that it was not possible to update the surrogat
 However, as our study has been conducted with a focus on reproducibility and openness our findings can be replicated or extended by others regardless of compute availability (due to our use of GitHub actions as a compute platform which is freely available to researchers).
 Importantly in this study, we focussed on replicating the forecast hub ensembles' observed behaviour rather than attempting to define an optimal forecast for forecast consumers.
 It is possible that if we had instead aimed to develop a forecast methodology that minimised the evaluation criteria we planned to use, especially if we relaxed our assumed compute resource constraints, we would have produced forecasts that performed better relative to the hub ensemble.
-However, if we start from the view that the forecast hub ensemble has traits that are desirable for use by policy-makers (i.e robustness and good average performance), which can be found widely in the literature [@REF; @Sherratt2022-ue], then our approach makes sense and may be optimal for producing a "good" forecast.
+However, if we start from the view that the forecast hub ensemble has traits that are desirable for use by policy-makers (i.e robustness and good average performance), which can be found widely in the literature [@Cramer2022-sp; @Bracher2021-wk; @Sherratt2022-ue], then our approach makes sense and may be optimal for producing a "good" forecast.
 Our focus on replicating the performance of the hub ensemble is also useful as the surrogate model may highlight some of the emergent behaviour of the ensemble captured in our assumptions, such as auto-correlation across time points, and the growth rate tending towards zero as the forecast horizon increases.
 It also highlights some of the differences between our surrogate forecast model and the ensemble that may lead to new insights in understanding the mechanisms leading to the ensembles behaviour, such as the generally poor coverage of the ensemble that could not be explained by the assumptions we used in developing our surrogate methodology.
 Whilst we normalised reported cases to be population-adjusted incidence rates our results are conditional on the use of the weighted interval score as an evaluation metric.
@@ -587,16 +587,16 @@ We considered alternative methods of forecast evaluation that would be robust to
 
 There are no other studies in the epidemiology literature which we are aware of that attempt to develop a forecasting model based on the observed behaviour of a multi-team, multi-model ensemble.
 Few studies focus on delivering computationally feasible forecasting models in a reproducible framework backed by an openly accessible compute platform. 
-However, the US [@REF], European [@Sherratt2022-ue], and Germany/Poland [@REF] forecasting hubs have published a range of evaluations of forecasts submitted to their platforms and the relative performance of their ensembles. 
+However, the US [@Cramer2022-sp], European [@Sherratt2022-ue], and Germany/Poland [@Bracher2021-wk] forecasting hubs have published a range of evaluations of forecasts submitted to their platforms and the relative performance of their ensembles. 
 In general, these studies have struggled to draw general conclusions about the structural assumptions of forecast models they consider "good" (generally they have defined this as minimising the weighted interval score as done in this study). 
-The poor calibration of the forecast ensembles produced by median Hub ensembles as been noted repeatedly [REFEVAN; REFJOHANNES; @Sherratt2022-ue] but little progress has been made understanding the causes or suggesting alternatives forecasts for policy makers to use.
-The US forecast hub identified the top 5 performing models and noted the structural assumptions they made [@REF].
+The poor calibration of the forecast ensembles produced by median Hub ensembles as been noted repeatedly [@Cramer2022-sp; @Bracher2021-wk; @Sherratt2022-ue] but little progress has been made understanding the causes or suggesting alternatives forecasts for policy makers to use.
+The US forecast hub identified the top 5 performing models and noted the structural assumptions they made [@Cramer2022-sp].
 However, they did not extensively compare and contrast these conclusions to arrive at a set of desired forecast assumptions as done in this study to motivate the surrogate model or explore the performance of a forecasting model designed with these assumptions in mind.
 Similarly, the Germany and Poland forecasting hubs was able to identify forecast models that performed comparably as well as their ensemble forecasts but did not derive structural assumptions that led to this out-performance or detail explicitly what the desirable performance characteristics would be, aside from optimising the weighted interval score.
-All comparable forecast hub projects found that their ensemble was often the best choice, had desirable characteristics such as robustness, though this was rarely fully defined, and should be the output used by forecast consumers [@REF; @REF; @Sherratt2022-ue].
+All comparable forecast hub projects found that their ensemble was often the best choice, had desirable characteristics such as robustness, though this was rarely fully defined, and should be the output used by forecast consumers [@Cramer2022-sp; @Bracher2021-wk; @Sherratt2022-ue].
 In general, during the study period, all projects used the same unweighted median ensemble forecast of all submissions. 
-The CDC, and European, forecasting hub also evaluated a range of other ensemble approaches, such as inverse weighted interval score weighting, unweighted ensembles of a selection of models based on recent performance, and mean ensembling [@REF; @Sherratt2022-ue].
-Work on this is still ongoing but these more complex ensembling approaches were shown to outperform the median of all submitted forecasts in many cases in the case of the CDC forecasting hub and did not outperform in the case of the European forecasting hub.
+The US [@Cramer2022-sp], and European [@Sherratt2022-ue]], forecasting hub also evaluated a range of other ensemble approaches, such as inverse weighted interval score weighting, unweighted ensembles of a selection of models based on recent performance, and mean ensembling.
+Work on this is still ongoing but these more complex ensembling approaches were shown to outperform the median of all submitted forecasts in many cases in the case of the UUS forecasting hub and did not outperform in the case of the European forecasting hub.
 No forecast hub has switched to these alternative ensemble designs for their operational forecast suggesting they do not think the evidence base is strong enough for them to be used by forecast consumers and hence the median of all submitted forecasts remains the community-suggested default ensemble option and a sensible target for our study. 
 Other studies have been published evaluating single forecast models in comparison to ensemble performance from the forecast hub but in general, these have not focussed on replicating ensemble behaviour but rather optimising the target evaluation metric. 
 Our previous work also highlighted the lack of calibration in an ensemble forecast from the Germany/Poland forecasting hub compared to forecasts from epidemiological models and noted the bias towards underprediction observed in the ensemble forecasts and not in our the model-based forecasts [@Bosse2022-hm; @Bracher2021-wk].
