update use of data to be locked at 1st Sept 2022 #1

--- a/paper/library.bib
+++ b/paper/library.bib
@@ -374,3 +374,20 @@
   doi      = "10.1073/pnas.2113561119",
   pmc      = "PMC9169655"
 }
+
+@ARTICLE{JHU,
+  title    = "An interactive web-based dashboard to track {COVID-19} in real
+              time",
+  author   = "Dong, Ensheng and Du, Hongru and Gardner, Lauren",
+  journal  = "Lancet Infect. Dis.",
+  volume   =  20,
+  number   =  5,
+  pages    = "533--534",
+  month    =  may,
+  year     =  2020,
+  language = "en",
+  issn     = "1473-3099, 1474-4457",
+  pmid     = "32087114",
+  doi      = "10.1016/S1473-3099(20)30120-1",
+  pmc      = "PMC7159018"
+}
