--- a/paper/paper.Rmd
+++ b/paper/paper.Rmd
@@ -157,11 +157,13 @@ scores <- fread(here("data", "scores.csv")) |>
   
 We extracted forecasts and data on notified weekly COVID-19 cases from the European forecasting hub [@Sherratt2022-ue; @EuroHub] from the 15th of January 2022 to the 19th of July 2022 for the ensemble model (referred to as the `EuroCOVIDhub-ensemble` by the hub team) and the surrogate model (submitted as `epiforecasts-weeklygrowth`).
 We included all locations covered by the European forecasting hub which were 32 European countries, including all countries of the European Union and European Free Trade Area, and the United Kingdom.
-Data on notified weekly cases was originally sourced from the Johns Hopkins University (JHU) curated data repository [@REF].
-We used the latest available observed data as of the 20th of August 2022. As observations are subject to revisions this means that the data used to produce forecasts for a given date may not reflect the data used for evaluation.
-This follows the practice of the European forecasting hub project in treating the latest available data as the forecast target regardless of the number of potential data revisions [@Sherratt2022-ue].
+Data on notified weekly cases was originally sourced from the Johns Hopkins University (JHU) curated data repository [@JHU].
+We used the latest available observed data as of the 1st of September 2022 (commit `f6922c3e4bdcb055abcbba8e73472afacac4cf40` from [@EuroHubGitHub]).
 Incidence was aggregated over the Morbidity and Mortality Weekly Report (MMWR) epidemiological week definition of Sunday through Saturday.
-  
+As observations are subject to revisions this means that the data used to produce forecasts for a given date may not reflect the data used for evaluation.
+To account for this we followed the practice of the European forecasting hub project in excluding forecasts made using anomolous truth data in the week of the forecasts production and excluding forecasts for target weeks with anomolous data [@Sherratt2022-ue].
+We defined anomolous data based on the implementation used by the [@EuroHub] where a datapoint is considered anomolous if a future revision alters it by more than 5%.
+
 The European forecast hub requests forecasts for one to four-week forecast horizon and requires forecasts to use a pre-specified format with 23 quantiles of the predictive probability distribution.
 No restrictions were placed on who could submit forecasts and the hub team actively invited participation from research groups known to be involved with COVID-19 forecasting projects.
 Forecasters used a wide range of forecasting methods including statistical approaches, mechanistic models including deterministic ordinary differential equation models and agent-based models, semi-mechanistic models, expert elicitation models, and ensembles of multiple approaches [@EuroHub].
